# vercel-deploy

./: .env  .env.development.local  .env.production.local  .gitignore  Cargo.toml  Dockerfile  railway.toml  vercel.json
api/: main.rs
public/: about.html  index.html  movie.html
src/: main.rs
