[package]
name = "dbconnect"
version = "0.1.0"
edition = "2024"
resolver = "2"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
dotenv = "0.15"
hyper = "1.8.1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
http-body-util = "0.1"